<resources>
    <string name="app_name">Семейный планнер</string>
    <string name="close">Закрыть</string>
    <string name="delete">Удалить</string>
    <string name="done">Готово</string>
    <string name="cancel">Отмена</string>
    <string name="task_topic">Тема задачи</string>
    <string name="task_content">Описание задачи</string>
    <string name="task_deadline">Крайний срок</string>
    <string name="add">+</string>
    <string name="take_task">Взять задание</string>
<!--    <string name="task_deadline">Крайний срок</string>-->

</resources>
