<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textCapSentences"
        android:hint="@string/task_topic"
        android:id="@+id/fam_topic_et"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textCapSentences"
        android:hint="@string/task_content"
        android:id="@+id/fam_content_et"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textCapSentences"
        android:hint="@string/task_deadline"
        android:id="@+id/fam_deadline"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/fam_confirm_btn"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:id="@+id/fam_cancel_btn"/>

</LinearLayout>